force-app/main/default/objects/Test_Steps__c/fields/Actual_Results__c.field-meta.xml
<CustomField>
    <fullName>Actual_Results__c</fullName>
    <label>Actual Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>