force-app/main/default/objects/Test_Steps__c/fields/Exec_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Exec_Date_time__c</fullName>
    <label>Exec Date/time</label>
    <type>DateTime</type>
</CustomField>