force-app/main/default/objects/Test_Steps__c/fields/Schedule_Mark__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Mark__c</fullName>
    <formula>if(and(Plan_End_Date__c  &lt;  TODAY(), OR(ispickval(Status__c,&quot;No Run&quot;), ispickval(Status__c,&quot;Failed&quot;))), &apos;Delay&apos;, &apos;On Schedule&apos;)</formula>
    <label>Schedule Mark</label>
    <type>Text</type>
</CustomField>