force-app/main/default/objects/Test_Steps__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>