force-app/main/default/objects/Test_Steps__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Run</fullName>
                <color>#F3D904</color>
                <default>true</default>
                <label>No Run</label>
            </value>
            <value>
                <fullName>Pass</fullName>
                <color>#33CC00</color>
                <label>Pass</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <color>#CC0000</color>
                <label>Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>