force-app/main/default/objects/Test_Steps__c/fields/Step_Details__c.field-meta.xml
<CustomField>
    <fullName>Step_Details__c</fullName>
    <label>Step Details</label>
    <length>13100</length>
    <type>LongTextArea</type>
</CustomField>