force-app/main/default/objects/Test_Steps__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <label>Test Case</label>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipName>Test_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>